<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.movie.MovieFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="229dp"
                android:layout_height="178dp"
                android:layout_marginTop="@dimen/editext_gap"
                android:src="@drawable/star_wars"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_description_text_view"
                android:layout_width="358dp"
                android:layout_height="87dp"
                android:layout_marginTop="@dimen/medium_gap"
                android:text="@string/description_text_view"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/calification_text_view_movieinfo"
                app:layout_constraintHorizontal_bias="0.343"
                app:layout_constraintStart_toStartOf="@+id/category_movie_text_view"
                app:layout_constraintTop_toBottomOf="@+id/calification_text_view_movieinfo" />

            <TextView
                android:id="@+id/category_movie_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fiction_category_text"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/calification_text_view_movieinfo" />

            <TextView
                android:id="@+id/calification_text_view_movieinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_gap"
                android:text="@string/calification_category_text"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toEndOf="@+id/category_movie_text_view"
                app:layout_constraintTop_toBottomOf="@+id/name_movie_text_view" />

            <TextView
                android:id="@+id/name_movie_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_gap"
                android:text="@string/name_movie_text"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</layout>


