<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.movie.NewMovieFragment">

    <data>
        <variable
            name="viewmodel"
            type="com.example.laboratorio_05.ui.movie.MovieViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_fragment_create_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_gap"
                android:text="@string/tittle_new_movie_text"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:text="@={viewmodel.name}"
                android:id="@+id/name_edittext"
                android:layout_width="321dp"
                android:layout_height="54dp"
                android:layout_marginTop="16dp"
                android:background="@color/cardLayout"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:hint="@string/name_edit_text"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/title_fragment_create_text"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="@+id/title_fragment_create_text"
                app:layout_constraintTop_toBottomOf="@+id/title_fragment_create_text" />

            <EditText
                android:text="@={viewmodel.category}"
                android:id="@+id/category_edittext"
                android:layout_width="321dp"
                android:layout_height="54dp"
                android:layout_marginTop="@dimen/medium_gap"
                android:background="@color/cardLayout"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:hint="@string/category_editext_newmovie"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/name_edittext"
                app:layout_constraintStart_toStartOf="@+id/name_edittext"
                app:layout_constraintTop_toBottomOf="@+id/name_edittext" />

            <EditText
                android:text="@={viewmodel.description}"
                android:id="@+id/description_edittext"
                android:layout_width="321dp"
                android:layout_height="54dp"
                android:layout_marginTop="@dimen/medium_gap"
                android:background="@color/cardLayout"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:hint="@string/description_edittext_newMovie"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/category_edittext"
                app:layout_constraintStart_toStartOf="@+id/category_edittext"
                app:layout_constraintTop_toBottomOf="@+id/category_edittext" />

            <EditText
                android:text="@={viewmodel.qualification}"
                android:id="@+id/calification_edittext"
                android:layout_width="321dp"
                android:layout_height="54dp"
                android:layout_marginTop="@dimen/medium_gap"
                android:background="@color/cardLayout"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:hint="@string/calification_edittext_newMovie"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/description_edittext"
                app:layout_constraintStart_toStartOf="@+id/description_edittext"
                app:layout_constraintTop_toBottomOf="@+id/description_edittext" />

            <Button
                android:onClick="@{() -> viewmodel.createMovie()}"
                android:id="@+id/action_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_gap"
                android:backgroundTint="@color/buttonColor"
                android:text="SUBMIT"
                app:layout_constraintEnd_toEndOf="@+id/calification_edittext"
                app:layout_constraintStart_toStartOf="@+id/calification_edittext"
                app:layout_constraintTop_toBottomOf="@+id/calification_edittext" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>

